# notes

./: .gitignore  README.md  makefile
cmake/demo/: .clang-format  .gitignore  CMakelists.txt  README.md  makefile
cmake/demo/src/: CMakelists.txt  main.cpp
cmake/demo/src/module1/: CMakelists.txt  module1.cpp
cmake/demo/src/module2/: CMakelists.txt  module2.cpp
cmake/demo/src/module3/: CMakelists.txt  module3.cpp
cmake/demo/src/module4/: CMakelists.txt  module4.cpp
cpp/: .clang-format  .clangd  .gitignore  BASE_NOTE.md  CMakelists.txt  ITEM_NOTE.md  README.md  makefile
cpp/move/basic/: .clang-format  .clang-tidy  CMakeLists.txt
cpp/move/basic/src/: add.cc  main.cc
cpp/src/: CMakelists.txt
cpp/src/base/: base1.cc  base10.cc  base2.cc  base3.cc  base4.cc  base5.cc  base6.cc  base7.cc  base8.cc  base9.cc
cpp/src/include/utils/: util.h
cpp/src/item/: item1.cc  item10.cc  item14.cc  item15.cc  item17.cc  item18.cc  item19.cc  item2.cc  item20.cc  item21.cc  item22.cc  item23.cc  item24.cc  item25.cc  item3.cc  item31.cc  item4.cc  item5.cc  item6.cc  item7.cc  item8.cc  item9.cc
go/async/: README.md  go.mod  main.go  staticcheck.conf
go/async/channel/: asyncdemo.go  channel.go  context.go  contextType.go  datarace.go  main.go  select.go  waitgroup.go
rust/: Cargo.toml
rust/src/: main.rs
rust/src/advance/: global_variable.rs  mod.rs  reference.rs  smart_pointer.rs
rust/src/utils/: mod.rs  run.rs  util.rs
template/: .clang-tidy  CMakeLists.txt  makefile
template/src/: main.cc
template/src/include/: header.h
(+8 files in other folders)
